--- a/src/css/components/_section-choose.scss
+++ b/src/css/components/_section-choose.scss
@@ -12,14 +12,26 @@
     }
 
     &__content-box {
-        padding-top: 200px;
-        width: 50%;
+        text-align: center;
+        padding-top: 80px;
+        width: 75%;
+
+        @include media($screen-tablet){
+            padding-top: 200px;
+            width: 50%;
+            text-align: left;
+        }
     }
 
     &__title {
         @include text($H600, 400, $white);
         margin-bottom: 60px;
-        text-align: left;
+        text-align: center;
+
+        @include media($screen-tablet){
+            text-align: left;
+            margin-bottom: 40px;
+        }
     }
 
     &__description{
@@ -37,20 +49,38 @@
     }
 
     &__image-box {
-        padding-top: 120px;
-        padding-left: 95px;
-        width: 50%;
-        margin-bottom: 120px;
+        padding-top: 100px;
+        padding-left: 0px;
+        width: 70%;
+        margin-bottom: 80px;
+        padding-left: 0px;
+        margin: 0 auto;
+
+        @include media($screen-tablet){
+            padding-top: 120px;
+            padding-left: 95px;
+            width: 50%;
+            margin-bottom: 120px;
+        }
+        
     }
 
     &__image-wrapper {
         width: 350px;
         height: 220px;
         &:nth-child(1) {
-            margin-bottom: 5px;
+            margin-bottom: 20px;
         }
-        &:nth-child(2) {
-            float: right;
+        
+        @include media($screen-tablet){
+            width: 350px;
+            height: 220px;
+            &:nth-child(1) {
+                margin-bottom: 5px;
+            }
+            &:nth-child(2) {
+                float: right;
+            }
         }
     }
     &__image {
@@ -59,13 +89,3 @@
     }
 }
 
-
-
-// .button {
-// }
-// .section-choose__button {
-// }
-// .section-choose__image-box {
-// }
-// .section-choose {
-// }
