--- a/src/css/components/_section-choose.scss
+++ b/src/css/components/_section-choose.scss
@@ -68,8 +68,12 @@
     &__image-wrapper {
         width: 350px;
         height: 220px;
+        margin: 0 auto;
         &:nth-child(1) {
             margin-bottom: 20px;
+        }
+        &:nth-child(2) {
+            margin-bottom: 40px;
         }
         
         @include media($screen-tablet){
@@ -80,6 +84,7 @@
             }
             &:nth-child(2) {
                 float: right;
+                margin-bottom: 0px;
             }
         }
     }
