--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -16,3 +16,6 @@
 @import "./components/section-travel";
 @import "./components/travel-card";
 @import "./components/_section-travel-next";
+@import "./components/section-tourist";
+@import "./components/_footer";
+
