--- a/src/css/components/_section-travel-next.scss
+++ b/src/css/components/_section-travel-next.scss
@@ -7,7 +7,10 @@
     padding-bottom: 100px;
 
     &__travel-card {
-        margin-left: auto;
-        margin-right: 0;
+        margin: 0 auto;
+
+        @include media($screen-desktop) {
+            margin-right: 0;
+        }
     }
 }
