--- a/src/css/components/_section-what-do.scss
+++ b/src/css/components/_section-what-do.scss
@@ -15,12 +15,32 @@
     // }
 
     &__list {
-        @include flex(space-around, center);
+        @include flex(flex-start, center, column);
+
+        @include media($screen-tablet){
+            @include flex(space-around, center);
+        }
+    }
+
+    &__item {
+        &:not(:last-of-type) {
+            margin-bottom: 70px;
+        }
+
+        @include media($screen-tablet){
+            &:not(:last-of-type) {
+                margin-bottom: 0px;
+            }
+        }
     }
 
     &__icon-wrapper {
         text-align: center;
-        margin-bottom: 30px;
+        margin-bottom: 10px;
+
+        @include media($screen-tablet){
+            margin-bottom: 30px;
+        }
     }
 
     &__icon {
