--- a/src/css/components/_section-tourist.scss
+++ b/src/css/components/_section-tourist.scss
@@ -2,36 +2,69 @@
     background-image: url(../images/section-4.png);
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 120px 0 200px;
+    padding: 50px 0px;
+
+    @include media($screen-tablet){
+        padding: 80px 0 100px;
+    }
+    @include media($screen-desktop) {
+        padding: 120px 0 200px;
+    }
 
     &__container {
         @include flex(flex-start, center, column);
     }
 
     &__title {
-        @include text($H600, 400, $white);
-        margin-bottom: 94px;
+        @include text($H500, 400, $white);
+        margin-bottom: 40px;
+        text-align: center;
+
+        @include media($screen-tablet){
+            @include text($H600, 400, $white);
+            margin-bottom: 70px;
+        }
+        @include media($screen-desktop) {
+            margin-bottom: 94px;
+        }
     }
 
     &__box {
+        width: 100%;
         background-color: $dark;
-        display: flex;
-       
+        @include flex(flex-start, center, column); 
+
+        @include media($screen-tablet){
+            width: 75%;
+        }
+        @include media($screen-desktop) {
+          @include flex(flex-start, center); 
+          width: 100%;
+        }
     }
 
     &__image-wrapper {
-        height: 284px;
-        
-    }
-
-    &__image {
         width: 100%;
+        @include padding-hack(64%, contain); 
+
+        @include media($screen-desktop) {
+            width: 40%;
+            @include padding-hack(28%, cover); 
+        }
     }
 
     &__content {
-        padding: 50px 47px 48px 55px;
+        width: 100%;
+        padding: 45px 24px;
         font-family: $secondary-font;
         line-height: 26px;
+
+        @include media($screen-tablet){
+            padding: 50px 47px 48px 55px;
+        }
+        @include media($screen-desktop) {
+            width: 60%;
+        }
     }
 
     &__content-title {
@@ -46,7 +79,5 @@
 
     &__content-text {
         @include text($H200, 400, $grey-light);
-     
     }
 }
-
