--- a/src/templates/section-tourist.html
+++ b/src/templates/section-tourist.html
@@ -3,7 +3,7 @@
         <h2 class="section-tourist__title">What Our Tourist Say</h2>
         <div class="section-tourist__box">
             <div class="section-tourist__image-wrapper">
-                <img class="section-tourist__image" src="images/card-3.png" alt="tourist">
+                <img class="section-tourist__image" src="images/section-tourist.png" alt="tourist">
             </div>
             <div class="section-tourist__content">
                 <h3 class="section-tourist__content-title">Sam Sumon</h3>
