--- a/src/css/core/_mixins.scss
+++ b/src/css/core/_mixins.scss
@@ -24,13 +24,11 @@
   }
 }
 
-@mixin padding-hack($padding: 50%, $size: contain, $dev: false) {
+@mixin padding-hack($padding: 50%, $size: contain) {
   position: relative;
   height: 0;
   padding-bottom: $padding;
-  @if $dev {
-    background-color: red;
-  }
+  
   img {
     position: absolute;
     top: 0;
@@ -41,9 +39,6 @@
     height: 100%;
     object-position: center;
     object-fit: $size;
-    @if $dev {
-      object-fit: contain;
-    }
   }
 }
 
