--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -3,13 +3,13 @@
     <h1 class="header__title">Bhromaon</h1>
     <h3 class="header__subtitle">Safe Travel Anywhere</h3>
     <form class="header__form" action="#">
-      <input class="header__input" type="search" placeholder="Search Your Travel Destination">
-      <button class="header__search">
-        <span class="header__search-text">Search</span>
-        <svg class="header__search-icon">
-          <use xlink:href="#search-icon"></use>
-        </svg>
-      </button>
+        <input class="header__input" type="search" placeholder="Search Your Travel Destination">
+        <button class="header__search">
+          <span class="header__search-text">Search</span>
+          <svg class="header__search-icon">
+            <use xlink:href="#search-icon"></use>
+          </svg>
+        </button>
     </form>
 
     <a class="header__scroll" href="#choose">
@@ -34,14 +34,14 @@
           <a class="navigation__link" href="#whatdo">Travel With Us</a>
         </li>
         <li class="navigation__item">
-          <a class="navigation__link" href="#">Contact Us</a>
+          <a class="navigation__link" href="#contact">Contact Us</a>
         </li>
       </ul>
     </div>
   </nav>
 </header>
 
-<svg>
+<svg style="display: none;">
   <symbol id="search-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20.062" viewBox="0 0 20 20.062">
     <defs>
       <style>
