--- a/src/templates/section-whatdo.html
+++ b/src/templates/section-whatdo.html
@@ -1,8 +1,7 @@
 <section id="whatdo" class="section-what-do">
   <div class="container section-what-do__container">
     <div class="section-what-do__line-wrapper">
-      <div class="section-what-do__line"></div>
-      <div class="section-what-do__line"></div>
+      <img src="images/line.png" alt="">
     </div>
     <ul class="section-what-do__list">
       <li class="section-what-do__item">
