--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -46,21 +46,27 @@
     }
 
     &__form {
-        background-color: none;
-        @include flex(flex-start, center, column);
         margin-bottom: 120px;
+    }
+
+    &__form-wrapper {
+        background-color: none;
+        width: 100%;
+        @include flex(flex-start, center, column);
 
         @include media($screen-tablet){
             @include flex;
             background-color: $white;
+            border: 2px solid $white;
         }
     }
 
     &__input {
-        height: 60px;
+        height: 58px;
         max-width: 500px;
         width: 100%;
         border: none;
+        outline: none;
         padding: 0px 15px;
         margin-bottom: 20px;
         &::placeholder {
@@ -70,6 +76,10 @@
             text-align: center;
         }
 
+        &:focus {
+            border: 2px solid $blue;
+        }
+
         @include media($screen-tablet){
             width: 500px;
             margin-bottom: 0px;
@@ -77,7 +87,6 @@
     }
 
     &__search {
-        margin: 2px;
         @include flex(center, center);
         background-color: $btn-color;
         @include text($H100, 400, $white);
@@ -88,7 +97,7 @@
         cursor: pointer;
         border: none;
         outline: none;
-        float: right;  
+        float: right; 
     }
 
     &__search-text {
