--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -3,13 +3,15 @@
     <h1 class="header__title">Bhromaon</h1>
     <h3 class="header__subtitle">Safe Travel Anywhere</h3>
     <form class="header__form" action="#">
-        <input class="header__input" type="search" placeholder="Search Your Travel Destination">
-        <button class="header__search">
-          <span class="header__search-text">Search</span>
-          <svg class="header__search-icon">
-            <use xlink:href="#search-icon"></use>
-          </svg>
-        </button>
+        <div class="header__form-wrapper">
+          <input class="header__input" type="search" placeholder="Search Your Travel Destination">
+          <button class="header__search">
+            <span class="header__search-text">Search</span>
+            <svg class="header__search-icon">
+              <use xlink:href="#search-icon"></use>
+            </svg>
+          </button>
+        </div>
     </form>
 
     <a class="header__scroll" href="#choose">
