--- a/src/css/components/_logo.scss
+++ b/src/css/components/_logo.scss
@@ -1,6 +1,13 @@
 .logo {
-  @include text($H500, 700, $white);
+  @include text($H400, 700, $white);
   font-family: $secondary-font;
   text-transform: uppercase;
   letter-spacing: 0.1em;
+  padding-left: 24px;
+  z-index: 5;
+
+  @include media($screen-tablet){
+    @include text($H500, 700, $white);
+    padding-left: 0px;
+  }
 }
