--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -10,12 +10,12 @@
 @import "./components/header";
 @import "./components/navigation";
 @import "./components/logo";
+@import "./components/_burger";
 @import "./components/section-choose";
 @import "./components/button";
 @import "./components/section-what-do";
 @import "./components/section-travel";
 @import "./components/travel-card";
-@import "./components/_section-travel-next";
 @import "./components/section-tourist";
 @import "./components/_footer";
 
