--- a/src/css/components/_section-tourist.scss
+++ b/src/css/components/_section-tourist.scss
@@ -1,7 +1,6 @@
 .section-tourist {
     background-image: url(../images/section-4.png);
-    background-repeat: no-repeat;
-    background-size: cover;
+    @include background-image;
     padding: 50px 0px;
 
     @include media($screen-tablet){
