--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -3,15 +3,15 @@
     <h1 class="header__title">Bhromaon</h1>
     <h3 class="header__subtitle">Safe Travel Anywhere</h3>
     <form class="header__form" action="#">
-        <div class="header__form-wrapper">
-          <input class="header__input" type="search" placeholder="Search Your Travel Destination">
-          <button class="header__search">
-            <span class="header__search-text">Search</span>
-            <svg class="header__search-icon">
-              <use xlink:href="#search-icon"></use>
-            </svg>
-          </button>
-        </div>
+      <div class="header__form-wrapper">
+        <input class="header__input" type="search" placeholder="Search Your Travel Destination">
+        <button class="header__search">
+          <span class="header__search-text">Search</span>
+          <svg class="header__search-icon">
+            <use xlink:href="#search-icon"></use>
+          </svg>
+        </button>
+      </div>
     </form>
 
     <a class="header__scroll" href="#choose">
@@ -21,11 +21,11 @@
       </div>
     </a>
   </div>
-
+  <div class="header__backdrop" id="backdrop"></div>
   <nav class="navigation">
     <div class="container navigation__container">
       <h2 class="navigation__logo logo">Bhromaon</h2>
-      <ul class="navigation__list">
+      <ul class="navigation__list" id="navigation">
         <li class="navigation__item">
           <a class="navigation__link" href="#choose">Who We Are</a>
         </li>
@@ -33,12 +33,15 @@
           <a class="navigation__link" href="#whatdo">What We Do</a>
         </li>
         <li class="navigation__item">
-          <a class="navigation__link" href="#whatdo">Travel With Us</a>
+          <a class="navigation__link" href="#travel">Travel With Us</a>
         </li>
         <li class="navigation__item">
           <a class="navigation__link" href="#contact">Contact Us</a>
         </li>
       </ul>
+      <div class="navigation__burger burger" id="burger">
+        <span class="burger__line"></span>
+      </div>
     </div>
   </nav>
 </header>
