--- a/src/templates/section-tourist.html
+++ b/src/templates/section-tourist.html
@@ -8,7 +8,7 @@
             <div class="section-tourist__content">
                 <h3 class="section-tourist__content-title">Sam Sumon</h3>
                 <p class="section-tourist__content-text">
-                    <span class="section-tourist__content-text-marked">"</span>But I must explain to you how all this
+                    <span class="section-tourist__content-text-marked">🙶</span>But I must explain to you how all this
                     mistaken idea of account to denouncinpleasure and praising pain But I must explain to you how all
                     this mistaken idea of account to nai denouncing pleasure and praising pain was account born and I
                     account will give you a complete account of the system was account born and I account will give you
