--- a/src/templates/section-travel.html
+++ b/src/templates/section-travel.html
@@ -1,12 +1,28 @@
 <section id="travel" class="section-travel">
+  <div class="section-travel__row">
     <div class="container section-travel__container">
       <div class="section-travel__travel-card travel-card">
         <h4 class="travel-card__country">Spain</h4>
         <h3 class="travel-card__title">Grand Spain Madrid</h3>
         <p class="travel-card__description">
-          But I must explain to you how all this mistaken idea of account to denouncing pleasure and praising pain was account born and I account will give you a complete account of the system
+          But I must explain to you how all this mistaken idea of account to denouncing pleasure and praising pain was
+          account born and I account will give you a complete account of the system
         </p>
         <a class="travel-card__button button" href="#">Book Now</a>
       </div>
     </div>
-  </section>
+  </div>
+  <div class="section-travel__row section-travel__row--second">
+    <div class="container section-travel__container">
+      <div class="section-travel__travel-card section-travel__travel-card--row-2 travel-card">
+        <h4 class="travel-card__country">Spain</h4>
+        <h3 class="travel-card__title">Grand Spain Madrid</h3>
+        <p class="travel-card__description">
+          But I must explain to you how all this mistaken idea of account to denouncing pleasure and praising pain was
+          account born and I account will give you a complete account of the system
+        </p>
+        <a class="travel-card__button button" href="#">Book Now</a>
+      </div>
+    </div>
+  </div>
+</section>
